--- a/test/hello-world.yaml
+++ b/test/hello-world.yaml
@@ -1,13 +1,32 @@
-# hello-world.yaml
-apiVersion: argoproj.io/v1alpha1
-kind: Workflow                  # CRD - Workflow
+---
+apiVersion: apps/v1beta1
+kind: Deployment
 metadata:
-  generateName: hello-world    # workflow 이름
+  name: hello-deployment
 spec:
-  entrypoint: whalesay          # workflow 시작점
-  templates:
-  - name: whalesay
-    container:
-      image: docker/whalesay
-      command: [cowsay]
-      args: ["hello world"]
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        run: hello-world
+    spec:
+      containers:
+      - name: hello
+        image: nginxdemos/hello:latest
+        ports:
+        - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hello-service
+  labels:
+    run: hello-world
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    protocol: TCP
+  selector:
+    run: hello-world
